# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-10-08 17:38:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-113

    Summary:
      handlers, speed-up "Folder.copy_handler"
    Revision:
      itools--main--0.9--patch-113


    modified files:
     Changelog handlers/Folder.py


2005-09-29 17:06:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-112

    Summary:
      resources, add "traverse2" to the API (new feature)
    Revision:
      itools--main--0.9--patch-112


    modified files:
     Changelog resources/base.py


2005-08-31 17:25:47 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-111

    Summary:
      uri, add class variable "scheme" to the Mailto scheme
    Revision:
      itools--main--0.9--patch-111


    modified files:
     Changelog uri/mailto.py


2005-08-26 18:03:57 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-110

    Summary:
      handlers, fix "Folder.copy_handler"
    Revision:
      itools--main--0.9--patch-110


    modified files:
     Changelog handlers/Folder.py


2005-08-26 13:56:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-109

    Summary:
      catalog, stored fields can keep list values, it is a hack
    Revision:
      itools--main--0.9--patch-109


    modified files:
     Changelog catalog/Catalog.py


2005-08-24 15:54:06 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-108

    Summary:
      types, fix FileName so it detects type extensions in uppercase
    Revision:
      itools--main--0.9--patch-108


    modified files:
     Changelog types/__init__.py


2005-08-11 16:56:28 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-107

    Summary:
      merge fixes from the 0.8 branch
    Revision:
      itools--main--0.9--patch-107

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-100
       merge fixes from nderam
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-101