@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-12-08 13:40:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-114
+
+    Summary:
+      resources, fix for Windows
+    Revision:
+      itools--main--0.9--patch-114
+
+
+    modified files:
+     Changelog resources/__init__.py
+
+
 2005-10-08 17:38:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-113
 
     Summary:
